css/styles.css
html, body {
    height: 100%;
    margin: 0;
    padding: 0;
    font-family: Karla, Avenir Next, sans-serif;
}

* {
    margin: 0;
    padding: 0;
}

img {
    -webkit-user-drag: none;
    -khtml-user-drag: none;
    -moz-user-drag: none;
    -o-user-drag: none;
    user-drag: none;
    user-select: none;
}

*:focus {
    outline: none;
}

/* ---------------------------------------------------------------------------------------------------------------- */

/* #navbar {
    width: 100%;
    height: 90px;
    background-color: #4a69bd;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    color: white;
}

#navbar #logo {
    margin: auto 5%;
    font-size: 20px;
    font-weight: bold;
}

#navbar #options {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    margin: auto 5% auto 0;
}

#navbar #options p a {
    text-decoration: none;
    color: white;
    cursor: pointer;
}

#navbar #options p a:hover {
    color: #273c75;
    cursor: pointer;
    transition: 0.5s;
}

#navbar #options p {
    margin: 0 15px;
    font-size: 19px;
    font-weight: bold;
} */

/* Style the navigation menu */
.navbar {
    overflow: hidden;
    background-color: #60a3bc;
    position: relative;
  }
  
  /* Hide the links inside the navigation menu (except for logo/home) */
  .navbar #myLinks {
    display: none;
  }
  
  /* Style navigation menu links */
  .navbar a {
    color: #366c80;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
    display: block;
    background-color: #a7ccda;
  }
  
  /* Style the hamburger menu */
  .navbar a.icon {
    background: #60a3bc;
    display: block;
    position: absolute;
    right: 0;
    top: 0;
    zoom: 1.20;
  }
  
  /* Add a grey background color on mouse-over */
  .navbar a:hover {
    background-color: #84becb;
    color: #3e7b92;
  }
  
  /* Style the active link (or home/logo) */
  .active {
    background-color: #60a3bc;
    color: white;
    display: inline;
  }

.logo {
    margin-left: 10px;
    width: 40;
    display: inline-block;
    background-color: #60a3bc;
}

/* ---------------------------------------------------------------------------------------------------------------- */

#hero {
    margin-top: -2px;
    width: 100%;
    height: 650px;
    background-color: #4a69bd;
    -webkit-clip-path: polygon(0 0, 100% 0, 100% 0%, 0 100%);
    clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%); 
    z-index: -1000;

    display: flex;
    flex-direction: row;
    justify-content: space-between;
    flex-wrap: wrap;
}

#hero #hero-text {
    padding-left: 5%;
    padding-top: 8%;
    color: white;
    color: white;
}

#hero-stmt {
    font-size: 50px;
    font-weight: bold;
    padding-bottom: 20px;
}

#hero-para {
    line-height: 35px;
    font-size: 22px;
}

#hero img {
    height: 80%;
    padding-right: 5%;
}

/* ---------------------------------------------------------------------------------------------------------------- */

#socollab {
    margin-top: -2%;
    width: 100%;
    height: 87%;
    background-color: #4a69bd;
    /* -webkit-clip-path: polygon(0 0, 100% 0, 100% 0%, 0 100%); */
    /* clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);  */
    z-index: -1000;

    display: flex;
    flex-direction: row;
    justify-content: space-between;
    flex-wrap: wrap;
    overflow: hidden;
}

#socollab #socollab-text {
    padding-left: 5%;
    padding-top: 8%;
    color: white;
    color: white;
}

#socollab-stmt {
    font-size: 50px;
    font-weight: bold;
    padding-bottom: 20px;
}

#socollab-para {
    line-height: 35px;
    font-size: 18px;
}

#socollab img {
    height: 80%;
    /* padding-right: 5%; */
}

#socollab #socollab-text-left {
    padding-left: 5%;
    padding-top: 8%;
    color: white;
    width: 40%;
    display: inline;
}

#socollab #socollab-text-right {
    padding-left: 5%;
    padding-top: 8%;
    /* padding-right: 5%; */
    color: white;
    float: right;
    display: inline;
    width: 40%;
}

#socollab #socollab-text-right #banner-image {
    height: 10%;
    width: 100%;
    padding-bottom: 2%;
    float: right;
    display: inline;
}

.overlay {
    position: absolute;
    bottom: 20%;
    /* left: 0; */
    /* right: 0; */
    background-color: #60a3bc;
    overflow: hidden;
    width: 50%;
    height: 80%;
    transition: .5s ease;
    opacity: 0;
    border-radius: 10px;
  }

.banner-image {
    display: block;
    width: 100%;
    height: 100%;
    border-radius: 10px;
}

.banner-image-overlay {
    position: relative;
    width: 45%;
    height: 123%;
    display: inline-block;
    border-radius: 10px;
    
}
  
.banner-image-overlay:hover .overlay {
    width: 100%;
    opacity: 1;
}

.banner-text {
    white-space: nowrap; 
    color: white;
    font-size: 25px;
    position: absolute;
    overflow: hidden;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
}

.top-banners {
    height: 45%;
}

.bottom-banners {
    height: 45%;
}

/* ---------------------------------------------------------------------------------------------------

#filler {
    width: 100%;
    height: 150px;
    background-color: whitesmoke;
    -webkit-clip-path: polygon(0 0, 100% 0, 100% 0%, 0 100%);
    clip-path: polygon(0 95%, 100% 0, 100% 100%, 0 100%); 
    margin-top: -150px;
    z-index: 1000;
}

#people-container {
    margin-top: -5px;
    width: 100%;
    height: auto;
    padding: 30px 0;
    background-color: whitesmoke; 
}

#project-container {
    margin-top: -5px;
    width: 100%;
    height: auto;
    padding: 30px 0;
    background-color: whitesmoke; 
    margin-left: 50%; 
}

#project-banners {
    margin-top: -5px;
    width: 100%;
    height: auto;
    padding: 30px 0;
    background-color: whitesmoke; 
}

#header-stmt {
    font-size: 45px;
    font-weight: bold;
    padding-bottom: 20px;
    padding: 60px 0 15px 100px;
    padding-top: 40px;
    padding-left: 5%;
}

#people-container #header-stmt i {
    vertical-align: middle; 
    font-size: 17px; 
    padding-left: 2px; 
}

#project-banners #header-stmt i {
    vertical-align: middle; 
    font-size: 17px; 
    padding-left: 2px; 
}

#header-para {
    line-height: 30px;
    font-size: 20px;
    padding-left: 5%;
}

#header-para span {
    font-weight: bold;
    color: #5f27cd;
}

.wing-cont {
    width: 85%;
    height: auto;
    margin: 10px 0;
    margin-left: 5%;
}

.wing-cards {
    display: flex;
    flex-direction: row;
    justify-content: left;
    flex-wrap: wrap;
    flex-shrink: unset;
    width: 100%;
    height: auto;
}

.wing-name {
    padding: 25px 0;
    font-size: 30px;
    font-weight: bold;
    color: #576574;
}

.wing-card {
    width: 300px;
    height: 400px;
    background-color: white;
    margin: 10px 50px 10px 0;
    border-radius: 7px;
    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
    overflow: hidden;
    text-align: center;
}

.wing-card:hover {
    transform: scale(1.05);
    cursor: pointer;
    transition: 0.75s;
}

.wing-card .wing-pic-cont {
    width: 100%;
    height: 300px;
    background-color: lightpink;
    overflow: hidden;
}

.wing-card .wing-pic-cont .card-pic {
    width: 100%;
    filter: brightness(1.10);
    text-align: center;
}

.wing-card .card-details {
    height: 100px;
    background-color: #3c6382;
    display: flex;
    text-align: left;
    flex-direction: column;
    justify-content: center;
    margin: 0;
    padding: 0;
}

.wing-card .card-details .card-name {
    font-size: 24px;
    font-weight: bold;
    padding-left: 15px;
    padding-top: 0;
    margin-top: 0;
    color: white;
}

.wing-card .card-details .card-position {
    font-size: 18px;
    padding-top: 5px;
    padding-left: 15px;
    color: white;
}

/* ---------------------------------------------------------------------------------------------------------------- */

#footer {   
    white-space: 100%;
    min-height: 200px;
    height: auto;
    padding-bottom: 20px;
    background-color: #60a3bc;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    color: white;
    flex-wrap: wrap;
}

#footer #footer-logo {
    height: 50px;
    margin: auto 0;
    padding-top: 20px;
}

#footer #footer-details {
    margin: auto 5%;
}

#footer #socials {
    display: flex;
    flex-direction: row;
    justify-content: left;
    padding-top: 10px;
}

#footer #socials i {
    font-size: 25px;
    padding: 0 35px 15px 0;
    text-decoration: none;
    color: white;
}

#footer #socials i:hover {
    color: gold;
    cursor: pointer;
    transition: 0.5s;
}

/* #footer #feedback {
    margin: auto 5%;
    color: white;
    font-size: 19px;
}

#footer #feedback a {
    text-decoration: none;
    font-weight: bold;
    color: #273c75;
    font-size: 22px;
} */

/* ---------------------------------------------------------------------------------------------------------------- */

@media (max-width: 1340px) {
    #hero {
        display: block;
    }

    #hero img {
        display: none;
    }

    #hero-stmt {
        font-size: 40px;
        font-weight: bold;
        padding-bottom: 20px;
    }
    
    #hero-para {
        line-height: 32px;
        font-size: 19px;
    }

    #people-container #header-stmt {
        font-size: 35px;
    }

    #people-container #header-stmt i {
        font-size: 14px;
    }

    #project-banners #header-stmt {
        font-size: 35px;
    }

    #project-banners #header-stmt i {
        font-size: 14px;
    }

    #header-para {
        font-size: 19px;
    }

    #footer #footer-logo {
        height: 60px;
    }
}

/* ---------------------------------------------------------------------------------------------------------------- */

@media (max-width: 450px) {
    #navbar {
        height: 120px;
        flex-direction: column;
        justify-content: space-evenly;
        text-align: center;
    }

    /* #navbar #logo {
        margin: 30px auto 10px auto;
        display: inline-block;
    } */

    #navbar #options {
        width: 100%;
        margin: auto 0;
    }

    #navbar #options p {
        margin: 0 10px;
    }

    #navbar #options p a {
        font-size: 17px;
    }

    #hero {
        display: block;
        height: 500px;
    }

    #hero img {
        display: none;
    }

    #hero #hero-text {
        margin: auto 10px;
        padding: 17% 10px 0 10px;
        text-align: center;
    }

    #hero-stmt {
        font-size: 37px;
        font-weight: bold;
        text-align: center;
        padding-bottom: 20px;
    }
    
    #hero-para {
        line-height: 32px;
        font-size: 17px;
    }

    #hero-para br {
        display: none;
    }

    #socollab {
        display: block;
        height: 500px;
    }

    #socollab img {
        display: none;
    }

    #socollab #socollab-text {
        margin: auto 10px;
        padding: 17% 10px 0 10px;
        text-align: center;
    }

    #socollab-stmt {
        font-size: 37px;
        font-weight: bold;
        text-align: center;
        padding-bottom: 20px;
    }
    
    #socollab-para {
        line-height: 32px;
        font-size: 17px;
        padding-left: 2%;
        padding-right: 2%;
    }

    #socollab-para br {
        display: none;
    }

    #footer {
        display: flex;
        flex-direction: column;
        justify-content: space-evenly;
    }

    #footer #footer-details {
        margin: 0 auto;
        text-align: center;
    }

    #footer #footer-logo {
        height: 40px;
        margin: 5px auto 0 auto;
    }

    #footer #socials {
        margin: 5px auto 20px auto;
        justify-content: center;
        text-align: center;
    }

    #footer #socials i {
        margin: 10px;
        padding: 0;
    }

    #footer #disclaimers {
        font-size: 13px;
    }
}

